node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sec-eng-challenge-service
spec:
  type: ClusterIP
  selector:
    app: sec-eng-challenge
  ports:
    - name: http
      protocol: TCP
      port: 80 
      targetPort: 3000
