node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sec-eng-challenge-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: sec-eng-challenge.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sec-eng-challenge-service
            port:
              number: 80
